force-app/main/default/objects/Reporting_Requirement__c/Reporting_Requirement__c.object-meta.xml
<CustomObject>
    <label>Reporting Requirement</label>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>Reporting Requirement  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>