force-app/main/default/objects/Reporting_Requirement__c/fields/Actual_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total__c</fullName>
    <formula>IF(Aggregate_Total__c == 0.00, VALUE( TEXT( Total_Percentage__c ) ) * 100, VALUE(TEXT( Aggregate_Total__c )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>