force-app/main/default/objects/Reporting_Requirement__c/fields/Aggregate_Total__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Total__c</fullName>
    <label>Aggregate Total</label>
    <summarizedField>Monthly_Outcome__c.Total__c</summarizedField>
    <summaryForeignKey>Monthly_Outcome__c.Reporting_Requirement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>