force-app/main/default/objects/Reporting_Requirement__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <inlineHelpText>If the goal is a percentage, enter the number as an integer. EX: 20.00% = 20.00</inlineHelpText>
    <label>Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>