force-app/main/default/objects/Reporting_Requirement__c/fields/Total_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Percentage__c</fullName>
    <inlineHelpText>This is the total percentage OF THE ENTIRE YEAR. Status of this field must be tracked manually.</inlineHelpText>
    <label>Total Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>