force-app/main/default/objects/Reporting_Requirement__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <inlineHelpText>The type of outcome requirement that you are measuring, I.E. &quot;Number of Enrolled Students&quot;, &quot;Number of Students Served&quot;, &quot;Percentage of Students who Improved, etc.</inlineHelpText>
    <label>Unit Type</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>