force-app/main/default/objects/Reporting_Requirement__c/validationRules/Only_One_Amount_Per_RR.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Amount_Per_RR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Aggregate_Total__c &gt; 0,

 NOT(
     ISBLANK( Total_Percentage__c )
    )
)</errorConditionFormula>
    <errorMessage>Percentages cannot be populated on a requirement that has an aggregate total.</errorMessage>
</ValidationRule>